message Suite {
    message Test {
        enum State {
            Data = 1;
            PlainText = 2;
            RCData = 3;
            RawText = 4;
            ScriptData = 5;
        }

        message OptionalString {
            required bool hasValue = 1;
            optional string value = 2;
        }

        message DOCTYPE {
            required OptionalString name = 1;
            required OptionalString publicId = 2;
            required OptionalString systemId = 3;
            required bool forceQuirks = 4;
        }

        message StartTag {
            required string name = 1;
            map<string, string> attributes = 2;
            required bool selfClosing = 3;
        }

        message EndTag {
            required string name = 1;
        }

        message Comment {
            required string value = 1;
        }

        message Character {
            required string value = 1;
        }

        message Token {
            oneof token {
                DOCTYPE DocType = 1;
                StartTag StartTag = 2;
                EndTag EndTag = 3;
                Comment Comment = 4;
                Character Character = 5;
            }
        }

        required string description = 1;
        required string input = 2;
        repeated Token output = 3;
        repeated State initialStates = 4;
        required string lastStartTag = 5;
    }

    repeated Test tests = 1;
}
